--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,4 @@
 FROM nginx:1.22.1
 COPY nginx.conf /etc/nginx/templates/default.conf.template
+COPY /etc/nginx/html/index.html /etc/nginx/html/index.html
+COPY /etc/nginx/html/robots.txt /etc/nginx/html/robots.txt
