--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,4 +31,9 @@ server {
     location /media/ {
         alias /media/;
     }
+
+    location / {
+        alias /staticfiles/;
+        try_files $uri $uri/ /index.html;
+    }
 }
