--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,11 @@ server {
         proxy_pass http://backend:9090/s/;
     }
 
+    location /backend_static/ {
+        root /app/;
+        try_files $uri $uri/ /index.html;
+    }
+
     location /static/ {
         root /app/;
         try_files $uri $uri/ /index.html;
@@ -32,8 +37,9 @@ server {
         alias /media/;
     }
 
-    location / {
-        alias /staticfiles/;
-        try_files $uri $uri/ /index.html;
+  location / {
+      root /usr/share/nginx/html;
+      index  index.html index.htm;
+      try_files $uri /index.html;
     }
 }
