--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,7 +24,7 @@ server {
     }
 
     location /backend_static/ {
-        root /app/;
+        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
     }
 
