--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,23 +23,22 @@ server {
         proxy_pass http://backend:9090/s/;
     }
 
-    location /backend_static/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-    }
+    # location /backend_static/ {
+    #     root /usr/share/nginx/html;
+    #     try_files $uri $uri/ /index.html;
+    # }
 
-    location /static/ {
-        root /app/;
-        try_files $uri $uri/ /index.html;
-    }
+    # location /static/ {
+    #     root /app/;
+    #     try_files $uri $uri/ /index.html;
+    # }
 
     location /media/ {
         alias /media/;
     }
 
-  location / {
-      root /usr/share/nginx/html;
-      index  index.html index.htm;
-      try_files $uri /index.html;
+    location / {
+        alias /staticfiles/;
+        try_files $uri /index.html;
     }
 }
