--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,10 +28,10 @@ server {
     #     try_files $uri $uri/ /index.html;
     # }
 
-    # location /static/ {
-    #     root /app/;
-    #     try_files $uri $uri/ /index.html;
-    # }
+    location /static/ {
+        root /app/;
+        try_files $uri $uri/ /index.html;
+    }
 
     location /media/ {
         alias /media/;
