--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,10 +23,10 @@ server {
         proxy_pass http://backend:9090/s/;
     }
 
-    # location /backend_static/ {
-    #     root /usr/share/nginx/html;
-    #     try_files $uri $uri/ /index.html;
-    # }
+    location /backend_static/ {
+        root /app/;
+        try_files $uri $uri/ /index.html;
+    }
 
     location /static/ {
         root /app/;
